# RoboPilot

./: .gitignore  README.md
.github/workflows/: ci.yml
dashboard/: index.html  package.json  vite.config.js
dashboard/src/: App.vue  style.css
docs/: ARCHITECTURE.md  WINDOWS_WSL2.md
scripts/: bootstrap_ubuntu.sh  build_ros.sh  run_dashboard.sh  run_sim.sh
src/robopilot_sim/: CMakeLists.txt  package.xml
src/robopilot_sim/config/: bridge.yaml
src/robopilot_sim/launch/: simulation.launch.py
src/robopilot_sim/rviz/: robopilot.rviz
src/robopilot_sim/test/: test_robot_description.py
src/robopilot_sim/urdf/: robopilot.urdf.xacro
src/robopilot_sim/worlds/: training_world.sdf
